Sun Jan  2 20:21:18 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/macro.s: New.
	* regression/tests_pass/while.s: New.
	* error.c (MAXERROR): Reduced to 30.
	* whileif.c, whileif.h: Merge if/while tracking together.
	* filestack.h (PObject): Follow if/while changes.
	* filestack.c (FS_PushFilePObject): Likewise.
	(File_GetLine): Parsing long lines didn't correctly increment line
	number.
	* variables.c (c_lcl, c_gbl, c_set): Properly test end of keyword.
	(c_lcl): Restore local variable only once.
	* macros.c: Follow if/while changes.
	(c_mend): Simplify implementation.
	(c_mexit): Call FS_PopPObject instead of FS_PopMacroPObject (which was
	not meant to be called by anything else than FS_PopPObject).

Thu Dec 30 02:32:50 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/dsp.s: Move PLD tests to...
	* regression/tests_pass/pld_pldw_pli.s: ...here.
	* regression/tests_pass/nop.s: New.
	* regression/tests_pass/branch.s: Move BX/BLX tests to separate
	section and add BXJ test.
	* regression/tests_pass/arithmetic2.s: Move MUL/MLA tests to...
	* regression/tests_pass/mul_mla_mls.s: ...here and add MLS test.
	* regression/tests_pass/ldm_stm_pop_push.s: Add test on UAL syntax
	and condition codes.
	* regression/Makefile: Change asasm option -t into -cpu.
	* decode.c (oDecodeTable): Reinstate BIN; add BXJ, MLS, NOP; change PLD
	into PL; add suggestions for improvement.
	* m_cpuctrl.c: Use Target_NeedAtLeastArch.
	(m_bxj): New.
	* help_cop.c (help_copInt): Move to...
	* m_cop.c (CopInt): ...here. Use Target_NeedAtLeastArch.
	* m_cpumem.c: Use Target_NeedAtLeastArch.
	* option.c (GetCCode): Renamed from getCond and cleanup.
	(IsEndOfKeyword): Make use of Input_IsEndOfKeyword.
	(optionCondS): Support UAL syntax.
	(optionCondLdmStm): Support case where stack mode is not specified.
	* m_copmem.c (m_ldc2, m_stc2): Simplify. Use Target_NeedAtLeastArch.
	* m_cpu.c (m_nop): Support ARMv6K/ARMv6T2/ARMv7 NOP flavour.